--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
     "mongod": "^2.0.0",
     "mongodb": "^3.0.10"
   }
